--- a/gb/20/11/26/n12576790.md
+++ b/gb/20/11/26/n12576790.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/piedfj363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>误导原住民签昂贵手机计划 Telstra被罚巨款</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/20181011-Chi-Jin-Telstra_GettyImages-600x400.jpg" />
 <h6>5家Telstra销售门店的员工诱导108名原住民签下多个他们负担不起的手机计划，其中许多原住民还没有工作，主要靠政府福利金过活。(James Alcock/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年11月26日讯】（大纪元记者天睿澳洲悉尼报导）100多名经济不富裕的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>在Telstra销售员的误导下签下他们负担不起的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA%E8%AE%A1%E5%88%92.md#1">手机计划</a>，平均每人负债近8000澳元。这家电讯巨头因违反《澳洲消费者法》而面临5000万澳元的巨额<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>。</p>
-<p>11月26日，澳洲竞争与消费者委员会（ACCC）发布声明说，Telstra承认在2016年到2018年之间，5家销售门店的员工诱导108名<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>签下多个他们负担不起的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA%E8%AE%A1%E5%88%92.md#1">手机计划</a>，其中许多原住民还没有工作，主要靠政府福利金过活。签下手机计划后，这些原住民平均每人负债7400多澳元。</p>
+<p>【大纪元2020年11月26日讯】（大纪元记者天睿澳洲悉尼报导）100多名经济不富裕的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>在Telstra销售员的误导下签下他们负担不起的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA%E8%AE%A1%E5%88%92.md#1">手机计划</a>，平均每人负债近8000澳元。这家电讯巨头因违反《澳洲消费者法》而面临5000万澳元的巨额<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>。</p>
+<p>11月26日，澳洲竞争与消费者委员会（ACCC）发布声明说，Telstra承认在2016年到2018年之间，5家销售门店的员工诱导108名<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>签下多个他们负担不起的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%89%8B%E6%9C%BA%E8%AE%A1%E5%88%92.md#1">手机计划</a>，其中许多原住民还没有工作，主要靠政府福利金过活。签下手机计划后，这些原住民平均每人负债7400多澳元。</p>
 <p>这5家销售门店分别位于北领地、南澳、西澳。许多签下手机计划的原住民客户的第一语言并不是英语，并不了解这些手机计划的具体内容是什么，他们住在一些只有Telstra手机网能覆盖得到的偏远地区。</p>
 <p>一些销售人员没有合理解释客户签署合同后承担的财务风险，并误导客户，让他们以为一些产品是免费的。</p>
 <p>Telstra的董事会和高级管理人员在不当销售行为发生时并不知情，该公司也承认它没有有效的制度来发现或杜绝这类行为。</p>
-<p>承认不当销售行为的错误后，该公司与监管机构达成协议，同意支付5000万澳元的<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>，只等联邦法庭最后批准。</p>
+<p>承认不当销售行为的错误后，该公司与监管机构达成协议，同意支付5000万澳元的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>，只等联邦法庭最后批准。</p>
 <p>竞争与消费者委员会主席西姆斯（Rod Sims）说：“尽管随着时间的推移，Telstra意识到其门店的销售人员行为不当，但该公司没有采取迅速行动来阻止，这些做法仍在继续，并给原住民消费者造成了进一步、严重、但原本可以避免的经济困难。”</p>
 <p>Telstra公司还将一些未竟债务转交收债人，进一步加剧了事态的严重性。</p>
 <p>西姆斯说：“这些债务对受影响的个人产生了重大影响。例如，一名消费者欠下了超过1.9万澳元的债务；另一名消费者极度焦虑，担心如果不还钱就会坐牢；还有一名消费者用从养老金中取钱来支付Telstra的债务。”</p>
@@ -25,41 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612864.md#1">澳承诺七千万澳元 军事援助乌克兰抵抗俄罗斯</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612752.md#1">新州小城被凶猛洪水淹没 数十人被热心邻居救出</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612546.md#1">抗疫药Lageviro列入PBS 澳人今日起可服用</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612518.md#1">灾后垃圾隐藏危险 昆州消防救援部门提醒警惕</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612496.md#1">澳总理公布6500万元太空投资计划</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612418.md#1">澳洲农产量再创新高 产值将达810亿澳元</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612482.md#1">气象局发布强风暴雨预警 悉尼交通或陷入混乱</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/3/1/n13612459.md#1">感染蚊媒病毒 南澳一个月内一人死亡四人住院</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612384.md#1">联邦银行以18亿澳元出售所持中资银行股份</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/28/n13612361.md#1">澳总理召开内阁安全会议 商讨援乌武器弹药</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689970.md#1">政府呼吁提高工资增长同时兼顾企业生存能力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689814.md#1">E-Toll收费系统再出错 近8万驾车者受影响</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689836.md#1">新州警方在悉尼西南区查获价值25万元毒品</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688662.md#1">澳洲学校2023年开始启用新教学大纲</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688102.md#1">新州洪灾后 悉尼发现蚊子传播罗斯河病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687833.md#1">AHPPC：密接者隔离规定可在疫情高峰后废除</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688095.md#1">澳洲4月3日进入冬令时 时间回拨一小时</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687745.md#1">悉尼五星级酒店香格里拉少付员工逾300万薪资</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687828.md#1">强风肆虐悉尼 大树刮倒 屋顶被掀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687556.md#1">移民部长：打工度假者支持洪灾重建 可续签证</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513377.md#1" target="_blank">土改中的按比例杀人与反人类酷刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/26/n12576790.htm">误导原住民签昂贵手机计划 Telstra被罚巨款</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/26/n12576790.htm">误导原住民签昂贵手机计划 Telstra被罚巨款</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/piedfj363/djy/blob/master/gb/20/11/26/n12576790.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/11/26/n12576790.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
